fixed a bug, 16 tests left